# zapa

./: .gitignore  CLAUDE.md  README.md  alembic.ini  architecture.md  private_main.py  public_main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1207b06d8194_initial_schema.py  39366d3fe880_add_auth_service_dependencies.py  add_admin_and_profile_fields_to_user.py
app/: __init__.py
app/config/: __init__.py  base.py  database.py  encryption.py  private.py  public.py
app/core/: config.py  exceptions.py  logging.py
app/database/: __init__.py  connection.py  fixtures.py
app/private/: __init__.py  main.py
app/private/api/: __init__.py
app/private/api/v1/: __init__.py  health.py  router.py
app/services/: __init__.py  message_service.py
backend/: pyproject.toml
backend/app/adapters/: __init__.py  whatsapp.py
backend/app/adapters/llm/: __init__.py  agent.py  exceptions.py  tools.py
backend/app/config/: __init__.py  base.py  database.py  encryption.py  private.py  public.py  redis.py
backend/app/core/: config.py  database.py  dependencies.py  security.py  webhook_security.py
backend/app/models/: __init__.py  base.py  llm_config.py  message.py  session.py  user.py
backend/app/private/api/v1/: auth.py  webhooks.py
backend/app/private/api/v1/admin/: integration.py  llm_config.py  system.py  users.py
backend/app/public/: main.py
backend/app/public/api/v1/: auth.py  llm_config.py  messages.py  router.py
backend/app/schemas/: __init__.py  admin.py  agent.py  auth.py  llm.py  message.py  user.py  webhook.py
backend/app/services/: __init__.py  agent_service.py  auth_service.py  bridge_config.py  integration_monitor.py  integration_orchestrator.py  llm_config_service.py  llm_tools.py  message_processor.py  message_queue.py  message_service.py  retry_handler.py  webhook_handler.py
backend/tests/: conftest.py  fixtures.py
backend/tests/adapters/: __init__.py
backend/tests/adapters/llm/: __init__.py  test_agent.py  test_agent_integration.py  test_tools.py
backend/tests/integration/adapters/: test_whatsapp_integration.py
backend/tests/integration/private/api/v1/: test_webhook_endpoints.py
backend/tests/integration/public/api/v1/: test_auth_integration.py
backend/tests/integration/services/: test_agent_integration.py  test_webhook_integration.py  test_whatsapp_integration.py
backend/tests/unit/adapters/: __init__.py  test_whatsapp.py  test_whatsapp_unit.py
backend/tests/unit/core/: test_webhook_security.py
backend/tests/unit/private/api/v1/: test_admin_llm_config.py  test_admin_system.py  test_admin_users.py  test_auth.py
backend/tests/unit/public/api/v1/: test_auth.py
backend/tests/unit/schemas/: test_webhook.py
backend/tests/unit/services/: test_agent_service.py  test_auth_service.py  test_llm_tools.py  test_message_queue.py  test_retry_handler.py  test_webhook_handler.py
frontend/zapa-public/: .env.example  index.html  package-lock.json  package.json
frontend/zapa-public/src/api/: auth.js  client.js  llm.js  messages.js
frontend/zapa-public/src/components/: LLMSettings.vue  MessageHistory.vue
frontend/zapa-public/src/pages/: DashboardPage.vue  LoginPage.vue
frontend/zapa-public/src/router/: index.js
frontend/zapa-public/src/stores/: auth.js  llm.js  messages.js  stats.js
frontend/zapa-public/src/utils/: debounce.js
models/: auth_code.py  llm_config.py  user.py
schemas/: __init__.py  auth.py  llm.py  message.py  session.py
scripts/: setup.sh  test-all.sh  test-integration.sh
spec/: detailed-prd.md  implementation-reference.md  webhook-message-handling.md
spec/docs/: openai-agents-python.txt
spec/tasks/: 00-overview.md  01-project-setup.md  02-backend-structure.md  03-backend-models.md  03-configuration-settings.md  04-backend-adapters.md  04-database-migrations.md  05-backend-services.md  05-private-service-structure.md  06-backend-api.md  06-whatsapp-bridge-adapter.md  07-backend-auth.md  07-llm-adapter-interface.md  08-frontend-structure.md  08-message-service-storage.md  09-agent-service-llm-tools.md  10-admin-api-endpoints.md  10.1-dev-container-setup.md  11-webhook-handlers.md  12-public-auth-flow.md  13-whatsapp-bridge.md  13-whatsapp-integration.md  15-admin-frontend-setup.md  16-integration-testing.md  17-docker-setup.md
spec/tasks/v2/: 00-overview.md  02-database-models.md  03-configuration-settings.md  06-whatsapp-bridge-adapter.md  07-llm-adapter-interface.md  08-message-service-storage.md  09-agent-service-llm-tools.md  10-admin-api-endpoints.md  12-public-auth-flow.md  13-whatsapp-integration.md  14-frontend-user-dashboard.md  16-integration-testing.md
tests/: __init__.py  conftest.py  test_models.py  test_private_health.py  test_public_health.py  test_schemas.py
tests/integration/services/: test_message_integration.py
tests/unit/config/: test_base.py  test_database.py  test_encryption.py  test_private.py  test_public.py
tests/unit/core/: __init__.py  test_exceptions.py
tests/unit/database/: __init__.py  test_connection.py  test_fixtures.py
tests/unit/private/: __init__.py  test_main.py
tests/unit/private/api/: __init__.py
tests/unit/private/api/v1/: __init__.py  test_health.py
tests/unit/services/: test_message_service.py
