[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zapa"
version = "0.1.0"
description = "Zapa WhatsApp Agent System - Private and Public APIs"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    "python-jose[cryptography]==3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.3",
    "black==23.12.1",
    "ruff==0.1.11",
    "mypy==1.8.0",
    "types-redis==4.6.0.20240106",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
env = [
    "ENVIRONMENT=test",
    "INTEGRATION_TEST_WHATSAPP=false",
    "INTEGRATION_TEST_OPENAI=false",
    "INTEGRATION_TEST_ANTHROPIC=false",
    "INTEGRATION_TEST_GOOGLE=false",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]  # line too long

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]