[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zapa"
version = "0.1.0"
description = "Zapa WhatsApp Agent System - Private and Public APIs"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.25",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "cryptography==42.0.5",
    "redis==5.0.1",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.3",
    "black==23.12.1",
    "ruff==0.1.11",
    "mypy==1.8.0",
    "types-redis==4.6.0.20240106",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "integration: Integration tests that require external services",
]
env = [
    "ENVIRONMENT=test",
    "INTEGRATION_TEST_WHATSAPP=false",
    "INTEGRATION_TEST_OPENAI=false",
    "INTEGRATION_TEST_ANTHROPIC=false",
    "INTEGRATION_TEST_GOOGLE=false",
]

[tool.coverage.run]
source = ["app", "models", "schemas"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '(alembic/.*\.py|app/.*\.py|backend/.*\.py|models/.*\.py|schemas/.*\.py|tests/.*\.py|.*\.py)'
exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | \.pytest_cache
  | __pycache__
  | frontend
  | htmlcov
  | .*\.egg-info
)/ | .*\.mako$
'''

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501", "F821", "B017"]  # line too long, forward references, pytest.raises(Exception)

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*", "models*", "schemas*"]
